--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ include MANIFEST.in
 
 include bspider/VERSION
 include bspider/config/rbac_model.conf
+include bspider/config/rbac_policy.csv
 recursive-include bspider/templates *
