--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,4 @@ include bspider/VERSION
 include bspider/config/rbac_model.conf
 include bspider/config/rbac_policy.csv
 recursive-include bspider/templates *
+recursive-include bspider/master/ui *
