--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.5.4
 aiomysql==0.0.20
 aiormq==2.7.2
+aniso8601==8.0.0
 APScheduler==3.6.1
 asn1crypto==0.24.0
 async-timeout==3.0.1
@@ -15,6 +16,7 @@ DBUtils==1.3
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-HTTPAuth==3.3.0
+Flask-RESTful==0.3.7
 Flask-WTF==0.14.2
 gevent==1.4.0
 greenlet==0.4.15
@@ -32,6 +34,7 @@ psutil==5.6.3
 pycparser==2.19
 PyMySQL==0.9.2
 pytz==2019.2
+redis==3.3.11
 requests==2.22.0
 simpleeval==0.9.8
 six==1.12.0
