--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.5.4
+aiohttp==3.6.2
 aiomysql==0.0.20
 aiormq==2.7.2
 aniso8601==8.0.0
@@ -16,7 +16,6 @@ DBUtils==1.3
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-HTTPAuth==3.3.0
-Flask-RESTful==0.3.7
 Flask-WTF==0.14.2
 gevent==1.4.0
 greenlet==0.4.15
@@ -34,6 +33,7 @@ psutil==5.6.3
 pycparser==2.19
 PyMySQL==0.9.2
 pytz==2019.2
+PyYAML==5.2
 redis==3.3.11
 requests==2.22.0
 simpleeval==0.9.8
@@ -41,6 +41,7 @@ six==1.12.0
 supervisor==4.0.4
 tzlocal==2.0.0
 urllib3==1.25.3
+voluptuous==0.11.7
 Werkzeug==0.15.5
 WTForms==2.2.1
 xpinyin==0.5.6
